--- a/package.json
+++ b/package.json
@@ -9,20 +9,15 @@
     "@babel/generator": "^7.15.4",
     "@babel/parser": "^7.15.7",
     "@babel/traverse": "^7.15.4",
-    "@babel/types": "^7.15.6",
-    "jss": "^10.8.0",
-    "loader-utils": "^0.2.15",
-    "styled-components": "^5.3.1"
+    "@babel/types": "^7.15.6"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.15.6",
-    "babel-loader": "^8.2.2",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "d": "webpack"
+    "dev": "webpack"
   },
   "author": "",
   "license": "ISC"
