--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "test",
+  "name": "young.js",
   "version": "1.0.0",
-  "description": "",
-  "main": "test.js",
-  "type": "commonjs",
+  "description": "A lightweight frameWork",
+  "main": "./dist/index.js",
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/generator": "^7.15.4",
-    "@babel/parser": "^7.15.7",
-    "@babel/traverse": "^7.15.4",
-    "@babel/types": "^7.15.6"
+    "jss": "^10.8.0",
+    "jss-preset-default": "^10.8.0"
   },
   "devDependencies": {
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC"
